[package]
authors = ["Jade Meskill <jade.meskill@gmail.com>"]
edition = "2018"
license = "MIT"
name = "blimey"
version = "0.3.1"
publish = []

[dependencies]
futures = "*"
http-types = "2.5.0"
serde = "*"
structopt = "0.3"
surf = "2.2.0"
openssl = { version = '0.10', features = ["vendored"] }

[dependencies.async-std]
features = ["attributes"]
version = "1.0.0"

[dev-dependencies]
mockito = "0.23.3"
serde_json = "1.0"
